# python-powershell

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build-n-publish.dev.yml  build-n-publish.stable.yml  python-build-n-publish-development-package.yml  python-build-n-publish-stable-package.yml  python-package-validate.yml  validate-package.yml
powershell/: __init__.py  __main__.py  generic.py  runners.py
tests/: test_module.py
