[build-system]
requires = ['setuptools', 'wheel', 'simplifiedapp']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = 'python-powershell'
dynamic = ['version', 'description', 'readme']
requires-python = '>=3.10'
authors = [
	{ name = 'Irving Leonard', email = 'irvingleonard@gmail.com'}
]
keywords = ['powershell']
license = {text = 'The Unlicense'}
classifiers = [
	'Development Status :: 4 - Beta',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Intended Audience :: End Users/Desktop',
	'License :: OSI Approved :: The Unlicense (Unlicense)',
	'Natural Language :: English',
	'Operating System :: OS Independent',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Topic :: System :: System Shells',
]

[project.urls]
homepage = 'https://github.com/irvingleonard/python-powershell'
# documentation = 'https://github.com/irvingleonard/python-powershell'
repository = 'https://github.com/irvingleonard/python-powershell.git'

[tool.setuptools.packages.find]
include = ['powershell*']